docs: update Terraform lessons and fix CloudFormation templates
- Add sparse checkout instructions to all Terraform lessons
- Fix CloudFormation templates with ASCII-only text
- Add solutions directory

--- a/iac/cloudformation/02-safe-operations/code/deletion-policy-demo.yaml
+++ b/iac/cloudformation/02-safe-operations/code/deletion-policy-demo.yaml
@@ -80,9 +80,7 @@ Resources:
         - Key: ManagedBy
           Value: CloudFormation
         - Key: Description
-          Value: |
-            This bucket is deleted when stack is deleted.
-            For temporary files and regeneratable data.
+          Value: Deleted when stack is deleted. For temporary files.
 
       # Security configuration
       PublicAccessBlockConfiguration:
@@ -125,9 +123,7 @@ Resources:
         - Key: ManagedBy
           Value: CloudFormation
         - Key: Description
-          Value: |
-            This bucket remains after stack deletion.
-            For important data protection. Manual management required after deletion.
+          Value: Retained after stack deletion. Manual management required.
 
       # Version control (best practice for important data)
       VersioningConfiguration:
