--- a/iac/cloudformation/06-enterprise-japan/code/audit-infra.yaml
+++ b/iac/cloudformation/06-enterprise-japan/code/audit-infra.yaml
@@ -276,7 +276,7 @@ Resources:
         - Key: ManagedBy
           Value: CloudFormation
         - Key: Purpose
-          Value: "API Operation Recording (API Audit Trail)"
+          Value: "API Audit Trail"
 
   # ===========================================================================
   # AWS Config - Compliance checking
