fix(lesson-11): use hierarchical state key path
- key: iac/terraform/11-cicd/cicd-demo/terraform.tfstate
- Matches course folder structure for better organization

--- a/iac/terraform/11-cicd/terraform-cicd-demo/oidc-setup/github-oidc.yaml
+++ b/iac/terraform/11-cicd/terraform-cicd-demo/oidc-setup/github-oidc.yaml
@@ -133,7 +133,7 @@ Resources:
               - s3:ListBucket
             Resource:
               - arn:aws:s3:::tfstate-terraform-course-*
-              - arn:aws:s3:::tfstate-terraform-course-*/cicd-demo/*
+              - arn:aws:s3:::tfstate-terraform-course-*/iac/terraform/11-cicd/*
 
           # S3 operations (for demo bucket - the actual resource we manage)
           - Sid: S3DemoResourceAccess
