--- a/iac/terraform/00-concepts/cfn/terraform-lab.yaml
+++ b/iac/terraform/00-concepts/cfn/terraform-lab.yaml
@@ -174,6 +174,12 @@ Resources:
                   - ec2:Describe*
                   - ec2:CreateTags
                   - ec2:DeleteTags
+                  # EC2 Instance permissions (for lesson 08-layout Layer 3 Application)
+                  - ec2:RunInstances
+                  - ec2:TerminateInstances
+                  - ec2:StartInstances
+                  - ec2:StopInstances
+                  - ec2:ModifyInstanceAttribute
                 Resource: '*'
 
               # IAM permissions (for lesson 06-loops IAM user exercises)
@@ -190,7 +196,39 @@ Resources:
                   - iam:TagUser
                   - iam:UntagUser
                   - iam:ListGroupsForUser
+                  # IAM Role permissions (for lesson 08-layout Layer 3 Application)
+                  - iam:CreateRole
+                  - iam:DeleteRole
+                  - iam:GetRole
+                  - iam:TagRole
+                  - iam:UntagRole
+                  - iam:PassRole
+                  - iam:PutRolePolicy
+                  - iam:DeleteRolePolicy
+                  - iam:GetRolePolicy
+                  - iam:AttachRolePolicy
+                  - iam:DetachRolePolicy
+                  - iam:CreateInstanceProfile
+                  - iam:DeleteInstanceProfile
+                  - iam:GetInstanceProfile
+                  - iam:TagInstanceProfile
+                  - iam:UntagInstanceProfile
+                  - iam:AddRoleToInstanceProfile
+                  - iam:RemoveRoleFromInstanceProfile
+                  - iam:ListInstanceProfilesForRole
                   - sts:GetCallerIdentity
+                Resource: '*'
+
+              # RDS permissions (for lesson 08-layout layered architecture lab)
+              - Effect: Allow
+                Action:
+                  - rds:CreateDBSubnetGroup
+                  - rds:DeleteDBSubnetGroup
+                  - rds:DescribeDBSubnetGroups
+                  - rds:ModifyDBSubnetGroup
+                  - rds:AddTagsToResource
+                  - rds:RemoveTagsFromResource
+                  - rds:ListTagsForResource
                 Resource: '*'
 
   InstanceProfile:
