fix: change Project default to terraform-lab for consistency

--- a/iac/terraform/00-concepts/cfn/terraform-lab.yaml
+++ b/iac/terraform/00-concepts/cfn/terraform-lab.yaml
@@ -31,7 +31,7 @@ Parameters:
 
   Project:
     Type: String
-    Default: terraform-course
+    Default: terraform-lab
     Description: Project name for tagging
 
 Resources:
